--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "nrohan09-cloud.github.io",
   "version": "0.1.0",
+  "homepage": "https://nrohan09-cloud.github.io/",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.17",
     "@types/react": "^16.14.11",
     "@types/react-dom": "^16.9.14",
+    "@types/styled-components": "^5.1.11",
+    "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -30,9 +39,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "node auto-increment.js && git add . && git commit -m updated-version && git push",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
