--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "@types/node": "^12.20.17",
     "@types/react": "^16.14.11",
     "@types/react-dom": "^16.9.14",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
-    "web-vitals": "^0.2.4",
     "version-incrementer": "^0.1.1",
+    "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
